// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`availability-show-type-field Renders \`availability-show-type-field\` with custom props 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Duration
          </div>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="1"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`availability-show-type-field Renders \`availability-show-type-field\` with required props 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Percent
          </div>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="availability"
          type="hidden"
          value="0"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;
